fix: layout issues in mobile resolution

--- a/src/apps/copilots/src/pages/copilot-opportunity-details/styles.module.scss
+++ b/src/apps/copilots/src/pages/copilot-opportunity-details/styles.module.scss
@@ -17,6 +17,12 @@
     color: $teal-100;
 }
 
+@media (max-width: 767px) {
+    .header {
+        line-height: 48px;
+    }
+}
+
 
 .infoRow {
     display: flex;
